# lumina

./: .gitignore  CLAUDE.md  DOCS.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: audio-engineer.md  firmware-engineer.md  lighting-designer.md  protocol-engineer.md  simulator-dev.md
.github/workflows/: ci.yml
docs/: genre-lighting-profiles.md  next-gen-plan.md  project-plan.md  protocol-spec.md
docs/architecture/: ai-model.md  audio-pipeline.md  simulator.md
lumina/: app.py
lumina/analysis/: arc_planner.py  edm_structure.py  layer_tracker.py  motif_detector.py  song_score.py
lumina/audio/: beat_detector.py  drop_predictor.py  energy_tracker.py  genre_classifier.py  models.py  onset_detector.py  segment_classifier.py  source_separator.py  structural_analyzer.py  vocal_detector.py
lumina/config/: default_fixtures.json
lumina/control/: __init__.py  discovery.py  fixture.py  network.py  protocol.py
lumina/lighting/: __init__.py  blender.py  engine.py  fixture_map.py  patterns.py  safety.py  transitions.py
lumina/lighting/profiles/: __init__.py  base.py  euro_alt.py  festival_edm.py  french_hard.py  french_melodic.py  generic.py  psych_rnb.py  rage_trap.py  theatrical.py  uk_bass.py
lumina/recording/: __init__.py  player.py  recorder.py
lumina/web/: __init__.py  server.py
scripts/: capture_audio.py  fixture_tester.py  profile_demo.py
simulator/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
simulator/src/: App.tsx
tests/: test_app.py  test_arc_planner.py  test_base_profile.py  test_beat_detector.py  test_blender.py  test_discovery.py  test_drop_predictor.py  test_energy_tracker.py  test_euro_alt.py  test_festival_edm.py  test_fixture_map.py  test_fixture_registry.py  test_french_hard.py  test_french_melodic.py  test_generic_profile.py  test_genre_classifier.py  test_layer_tracker.py  test_lighting_engine.py  test_motif_detector.py  test_network_manager.py  test_onset_detector.py  test_patterns.py  test_profiles_spatial.py  test_protocol.py  test_psych_rnb.py  test_rage_trap.py  test_recording.py  test_safety.py  test_segment_classifier.py  test_server.py  test_song_score.py  test_source_separator.py  test_structural_analyzer.py  test_theatrical.py  test_transitions.py  test_uk_bass.py  test_vocal_detector.py
(+21 files in other folders)
